added profile layout with timer

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="colorPrimary">#2196F3</color>
+    <color name="colorPrimary">#915FEA</color>
+    <color name="colorPrimaryDark">#360097</color>
+    <color name="colorAccent">#B7A8D1</color>
 </resources>
