--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,13 +9,31 @@
     android:padding="16dp"
     android:background="@android:color/white"
     tools:context=".Login">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginVertical="30dp"
+        android:gravity="center_vertical">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/clock_logo_background"
-        android:layout_gravity="center"
-        android:layout_marginBottom="24dp"/>
+        <ImageView
+            android:id="@+id/logoImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@drawable/main_logo"
+            android:layout_marginEnd="16dp"/>
+
+        <TextView
+            android:id="@+id/systemTitleTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/attendance_and_task_tracker"
+            android:textColor="@color/colorPrimary"
+            android:textStyle="bold"
+            android:textSize="26sp"
+          />
+    </LinearLayout>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/usernameInputLayout"
@@ -72,4 +90,6 @@
         android:elevation="4dp"
         android:layout_marginTop="16dp"
         android:layout_gravity="center"/>
+
+
 </LinearLayout>
