--- a/app/src/main/res/layout/activity_time_tracker.xml
+++ b/app/src/main/res/layout/activity_time_tracker.xml
@@ -40,13 +40,12 @@
 
 
             <ImageView
-                android:id="@+id/drop_down_option_menu"
+                android:id="@+id/btn_back"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:layout_alignParentRight="true"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/baseline_menu_24" />
+                android:src="@drawable/baseline_arrow_back_24" />
 
             <TextView
                 android:id="@+id/user_profile_name"
